--- a/FrontEnd/src/assets/styles/history.css
+++ b/FrontEnd/src/assets/styles/history.css
@@ -2,7 +2,7 @@
 
 
 
-    background-color:green;
+    /* background-color:pink; */
     height: auto;
     display:flex;
     justify-content: center;
@@ -13,7 +13,7 @@
 }
 
 .history-title {
-    background-color: red;
+    /* background-color: red; */
     width: 100%;
     display: flex;
     justify-content: center;
@@ -55,6 +55,84 @@ color: #FFB700;
   text-transform: capitalize;
 }
 .histories{
-  background-color: darkblue;
+ /* background-color: blue; */
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: stretch; /* important */
+  gap: 0.5rem;
+  width: 100%;
 }
+.histories-right{
+  /* background-color: red; */
+  width:40%;
+
+  display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.histories-left{
+  /* background-color: green; */
+  width:40%;
+
+    justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.timeline-item {
+  /* background-color: #f0f0f0; */
+  width:80%;
+
+}
+.timeline-description{
+  /* background-color: pink; */
+  display:flex;
+  flex-direction: column;
+  gap:1rem;
+}
+.line {
+  /* background-color: purple; */
+  display: flex;
+  align-items: flex-start; 
+  justify-content: flex-start;
+  width: 100%;
+  gap: 0.7rem;
+  flex-direction: row;
+  direction: rtl; 
+  text-align: right; 
+ 
+}
+
+.line.reverse {
+  flex-direction: row-reverse;
+  direction: rtl;
+  text-align: right;
+}
+
+.line img {
+  width: 15px;
+  height: auto;
+  flex-shrink: 0;
+ 
+}
+.histories-ligne {
+  width:8%;
+min-height:80vh;
+
+  background: linear-gradient(
+    180deg,
+    rgba(252, 250, 248, 0.3) 0%,
+    rgba(189, 185, 183, 0.3) 50%,
+    rgba(252, 250, 248, 0.3) 100%
+  );
+  opacity: 1;
+  position: relative;
+ 
+  border: 1px solid rgba(189, 185, 183, 0.3); 
+  
+}
+
+
+
 
