--- a/FrontEnd/src/assets/styles/history.css
+++ b/FrontEnd/src/assets/styles/history.css
@@ -83,6 +83,7 @@ color: #FFB700;
 .timeline-item {
   /* background-color: #f0f0f0; */
   width:80%;
+  position: relative;
 
 }
 .timeline-description{
@@ -90,13 +91,16 @@ color: #FFB700;
   display:flex;
   flex-direction: column;
   gap:1rem;
+  justify-content: flex-end;
+  align-items:flex-end ;
+
 }
 .line {
   /* background-color: purple; */
   display: flex;
   align-items: flex-start; 
   justify-content: flex-start;
-  width: 100%;
+  width: 80%;
   gap: 0.7rem;
   flex-direction: row;
   direction: rtl; 
@@ -105,7 +109,7 @@ color: #FFB700;
 }
 
 .line.reverse {
-  flex-direction: row-reverse;
+
   direction: rtl;
   text-align: right;
 }
@@ -132,6 +136,135 @@ min-height:80vh;
   border: 1px solid rgba(189, 185, 183, 0.3); 
   
 }
+.time{
+  /* background-color: pink; */
+  width:100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  
+
+}
+.timeline-year{
+    /* background-color: #29b300; */
+  color: white;
+ 
+padding:1rem;
+  clip-path: polygon(12% 0, 100% 0, 100% 100%, 0% 100%);
+ display:inline-block;
+ text-align: center;
+ width:35%;
+
+}
+.time {
+  width: 100%;
+  display: flex;
+  align-items: center;
+ padding-top:0.5rem;
+ padding-bottom: 0.5rem;
+}
+
+.align-right {
+  justify-content: flex-start;
+  /* background-color: green; */
+}
+
+.align-left {
+  justify-content: flex-end;
+  /* background-color: red; */
+}
+.year-left {
+  clip-path: polygon(12% 0, 100% 0, 100% 100%, 0% 100%);
+
+}
+
+.year-right {
+  clip-path: polygon(0 0, 88% 0, 100% 100%, 0% 100%);
+
+ 
+}
+.timeline-svg {
+  position: absolute;
+
+
+  width: 100%;
+ 
+
+  
+}
+
+.svg-right {
+ 
+top:10.6%;
+ left: 25%;
+  transform: scaleX(-1); 
+}
+
+.svg-left {
+ /* retourne le SVG horizontalement */
+  right:10%; top:10%;
+}
+.desc-right{
+  /* background-color: darkmagenta; */
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.timeline-year{
+  font-family: 'Cairo', sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: clamp(1rem, 2.5vw, 1.5rem); 
+  line-height: 1.8rem; 
+  letter-spacing: -0.017em;
+  text-align: center;
+  text-transform: capitalize;
+}
+.line-span{
+    font-family: 'Neo Sans Arabic', sans-serif;
+  font-weight: 400;
+  font-style: normal;  
+  font-size: clamp(1.1rem, 2vw, 1.2rem); 
+  line-height: 1.6;
+  
+
+  text-align: justify;
+  color: #4A4A4A;
+ 
+}
+.line{
+ 
+  align-items: center;
+}
+.green-word {
+  font-family: 'Neo Sans Arabic', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+ 
+  text-align: justify;
+  color: #007200;
+ 
+
+}
+
+.black-word {
+ 
+  color: black;
+  font-family: Neo Sans Arabic;
+font-weight: 700;
+font-style: Bold;
+font-size: 22px;
+
+line-height: 165%;
+letter-spacing: 3%;
+text-align: justify;
+
+}
+
+
+
+
 
 
 
