--- a/FrontEnd/src/assets/styles/history.css
+++ b/FrontEnd/src/assets/styles/history.css
@@ -55,11 +55,11 @@ color: #FFB700;
   text-transform: capitalize;
 }
 .histories{
- /* background-color: blue; */
+
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: stretch; /* important */
+  align-items: stretch; 
   gap: 0.5rem;
   width: 100%;
 }
@@ -71,15 +71,16 @@ color: #FFB700;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+   
 }
 .histories-left{
   /* background-color: green; */
   width:40%;
 
-    justify-content: flex-start;
-  align-items: flex-start;
+    justify-content: center;
+  align-items: center;
   flex-direction: column;
-  
+ 
 }
 .timeline-item {
   /* background-color: #f0f0f0; */
@@ -296,7 +297,276 @@ color: #4A4A4A;
   flex-direction: row-reverse;
 }
 
+@media (min-width: 2560px) {
+  .history-section {
+    /* background-color: pink; */
+    padding: 3rem 0;
+  gap:3rem
+  }
 
+  .history-title {
+    width: 70%;
+  }
+
+  .histories {
+    /* background-color: darkred; */
+    width: 75%;
+    gap: 2rem;
+  }
+
+  .histories-left,
+  .histories-right {
+    width: 45%;
+  }
+
+  .histories-left {
+    /* background-color: aliceblue; */
+    width:42%;
+       justify-content: center;
+    align-items: center;
+    padding:0rem;
+    gap:3rem;
+  }
+
+  .histories-right {
+   
+    /* background-color: aquamarine; */
+    width:42%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding:0rem;
+  }
+  .timeline-item{
+    width:100%;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+    padding:1rem;
+  
+    /* background-color: #FFB700; */
+  }
+  .timeline-description{
+    /* background-color: pink; */
+    width:100%;
+    
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding:2rem;
+    
+
+  }
+  .timeline-svg{
+    display:none
+  }
+  .timeline-year{
+    
+    
+  }
+  .histories-ligne{
+    /* background-color: darkgray; */
+    width:15%;
+  }
+  .history-title h1{
+   
+    font-size: 3.5rem;
+    gap:0.5rem;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .graph45{
+    width:65px
+  }
+  .history-title .quote{
+    font-size: 3.5rem;
+  
+  }
+  .timeline-year{
+    font-size: 2.2rem;
+  }
+  .line-span{
+    font-size: 1.9rem;
+     line-height: 1.9;
+  }
+  .line{
+    gap:1.5rem;
+    /* background-color: red; */
+    width:100%;
+
+  }
+  .line img{
+  
+    width:30px
+  }
+  .timeline-svg{
+  display:block;
+  width:75vh;
+  height:30vh;
+
+
+  }
+  .svg-left{
+ 
+  }
+  
+
+ 
+}
+
+@media(max-width:1024px){
+
+  .history-section{
+ 
+  }
+ 
+}
+@media(max-width:1024px) and (min-height:1024px){
+  .history-section{
+    background-color: #FFB700;
+  }
+  .histories{
+    width:100%;
+    /* background-color: pink; */
+  }
+  .histories-ligne{
+ 
+    min-width:15%;
+  }
+  .timeline-svg{
+    max-width:38vh
+  }
+  .svg-left{
+  
+    top:-0.5rem;
+    right:-0.5rem;
+  }
+   .svg-right{
+  
+    top:-0.5rem;
+    right:-0.5rem;
+  }
+}
+/* @media(max-width:991px){
+  .history-section{
+    background-color:pink;
+  }
+  .histories{
+    background-color: aqua;
+  }
+  .histories-left{
+    background-color: burlywood;
+  }
+  .histories-right{
+    background-color: chartreuse;
+  }
+  .histories-ligne{
+  min-width:18%;
+  }
+  .timeline-year{
+
+  align-items: flex-end;
+  padding:1rem;
+  }
+  .timeline-item{
+    width:90%;
+  }
+  .line{
+    width:100%;
+   
+  }
+  
+} */
+@media(max-width:768px){
+  .history-title{
+   
+    width:80%;
+  }
+  .histories{
+ 
+    padding:1.5rem;
+  }
+  .histories-left{
+  
+  }
+  .histories-right{
+  
+  }
+  .timeline-year{
+
+  }
+  .time{
+ 
+    margin-top:1.5rem;
+    display:flex;
+    justify-content: flex-end;
+    justify-content: flex-end;
+    align-items: flex-end;
+    
+  }
+  .align-right{
+    display:flex;
+    justify-content: flex-start;
+  
+    align-items: flex-start; 
+   margin-left: -1rem;
+  }
+  .timeline-item{
+    width:100%;
+  }
+  .line{
+   
+    width:95%;
+  }
+
+}
+@media(max-width:740px){
+  .histories{
+   
+    padding:1rem;
+   
+  }
+  .histories-left{
+   
+    width:42%;
+  }
+  .histories-right{
+ 
+    width:42%;
+  }
+  .histories-ligne{
+    width:15%
+  }
+  .timeline-svg{
+    width:55vh
+  }
+ 
+}
+@media(max-width:650px){
+  .histories{
+  
+    padding:0.5rem;
+    gap:0.8rem;
+  }
+  .timeline-svg{
+    width:50vh;
+  }
+ .timeline-year{
+  display:flex;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-top: 1.5rem;
+ }
+ .year-right{
+  justify-content: flex-start;
+ }
+ .timeline-item{
+  width:100%;
+ }
+ .line{
+  width:100%;
+ }
+}
 
 
 
