--- a/FrontEnd/src/assets/styles/history.css
+++ b/FrontEnd/src/assets/styles/history.css
@@ -161,6 +161,7 @@ min-height:80vh;
 padding:1rem;
 margin-top: 1rem;
 margin-left: 1rem;
+width:100%;
 
  display:inline-block;
  text-align: center;
@@ -413,163 +414,177 @@ color: #4A4A4A;
 
  
 }
+@media(min-width:1280px) and (max-width:1559px){
+  .history-section{background: #007200;}
+  .timeline-year{
+  width:100%;
 
+text-align: right;}
+.year-right{
+  text-align: left;
+}
+.timeline-svg{
+  width:65vh
+}
+}
 @media(max-width:1024px){
-
-  .history-section{
- 
-  }
- 
-}
-@media(max-width:1024px) and (min-height:1024px){
-  .history-section{
-    background-color: #FFB700;
-  }
-  .histories{
-    width:100%;
-    /* background-color: pink; */
-  }
-  .histories-ligne{
- 
-    min-width:15%;
-  }
   .timeline-svg{
-    max-width:38vh
-  }
-  .svg-left{
-  
-    top:-0.5rem;
-    right:-0.5rem;
-  }
-   .svg-right{
-  
-    top:-0.5rem;
-    right:-0.5rem;
-  }
-}
-/* @media(max-width:991px){
-  .history-section{
-    background-color:pink;
-  }
-  .histories{
-    background-color: aqua;
-  }
-  .histories-left{
-    background-color: burlywood;
-  }
-  .histories-right{
-    background-color: chartreuse;
+    width:80vh;
+    top:0rem;
+   
   }
   .histories-ligne{
-  min-width:18%;
+    width:15%;
   }
   .timeline-year{
-
-  align-items: flex-end;
+    width:50%;
+  }
+}
+@media(max-width:1024px) and (min-height:1024px) {
+ .history-section{
+ 
+  width:100%;
   padding:1rem;
-  }
-  .timeline-item{
-    width:90%;
-  }
-  .line{
-    width:100%;
-   
-  }
-  
-} */
-@media(max-width:768px){
-  .history-title{
-   
-    width:80%;
-  }
-  .histories{
- 
-    padding:1.5rem;
-  }
-  .histories-left{
-  
-  }
-  .histories-right{
-  
-  }
-  .timeline-year{
-
-  }
-  .time{
- 
-    margin-top:1.5rem;
-    display:flex;
-    justify-content: flex-end;
-    justify-content: flex-end;
-    align-items: flex-end;
-    
-  }
-  .align-right{
-    display:flex;
-    justify-content: flex-start;
-  
-    align-items: flex-start; 
-   margin-left: -1rem;
-  }
-  .timeline-item{
-    width:100%;
-  }
-  .line{
-   
-    width:95%;
-  }
-
-}
-@media(max-width:740px){
-  .histories{
-   
-    padding:1rem;
-   
-  }
-  .histories-left{
-   
-    width:42%;
-  }
-  .histories-right{
- 
-    width:42%;
-  }
-  .histories-ligne{
-    width:15%
-  }
-  .timeline-svg{
-    width:55vh
-  }
- 
-}
-@media(max-width:650px){
-  .histories{
-  
-    padding:0.5rem;
-    gap:0.8rem;
-  }
-  .timeline-svg{
-    width:50vh;
-  }
- .timeline-year{
-  display:flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-  margin-top: 1.5rem;
  }
- .year-right{
-  justify-content: flex-start;
+ .histories{
+  
+  width:100%;
+ }
+ .histories-left{
+
+  width:40%;
+ }
+ .histories-right{
+  width:40%;
+  
+ }
+ .histories-ligne{
+  width:20%;
  }
  .timeline-item{
   width:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
  }
- .line{
+ .timeline-description{
+ 
   width:100%;
+ }
+ .timeline-svg{
+  width:40vh;
+  top:0rem;
+ }
+ .svg-left{
+  right:0rem;
+ 
+ }
+ .svg-right{
+  left:0rem;
+ }
+ .timeline-year{
+  width:100%;
+  text-align:justify;
+  
+ }
+ .year-left{
+  text-align: end;
  }
 }
 
 
 
+ @media(max-width:768px){
+  
+  .history-section{
+   
+    width:100%;
+  }
+  .histories{
+    width:100%;
+   
+    padding:0.5rem;
+  }
+  .histories-left{
+  
+    width:42%;
+
+  }
+  .histories-right{
+  
+    width:42%;
+  }
+  .histories-ligne{
+    width:20%;
+  }
+  .timeline-item{
+    width:100%;
+    padding:0rem;
+ 
+  }
+  .timeline-description{
+   
+    width:100%;
+  }
+  .line{
+    width:100%;
+  }
+  
+  .svg-left{
+  
+top:0rem;
+right:0rem;
+
+  }
+  .svg-right{
+    left:0rem;
+    top:0rem;
+  }
+  .timeline-year{
+width:100%;
+
+margin-top: 2rem;
+display:flex;
+justify-content: flex-end;
+align-items: center;
+
+
+  }
+  .year-right{
+    justify-content: flex-start;
+    margin-left: 0rem;
+  }
+  .timeline-svg{
+    width:42vh
+  }
+  .history-title{
+   
+    width:80%;
+    text-align: center;
+  }
+  .history-title h1{
+  
+    text-align: center;
+  }
+
+} 
+@media(max-width:720px){
+
+
+
+
+  .timeline-svg{
+    width:55vh;
+  }
+  .timeline-year{
+    padding-top: 2rem;
+  }
+}
+@media(max-width:600px){
+  .timeline-svg{
+    width:50vh
+  }
+}
 
 
 
